logs/tracking/build.make.926.log.stderr
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: At global scope:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:16:1: error: prototype for ‘ImageAlignment::ImageAlignment(int, int)’ does not match any in class ‘ImageAlignment’
 ImageAlignment::ImageAlignment(int num_levels, int gradient_thresh){
 ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp: In function ‘int main()’:
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:33:58: error: no matching function for call to ‘ImageAlignment::ImageAlignment(const int&, const int&)’
   ImageAlignment imageAlign(num_levels,gradient_threshold);
                                                          ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:33:58: note: candidates are:
In file included from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:0:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:30:2: note: ImageAlignment::ImageAlignment(int)
  ImageAlignment(int num_levels);
  ^
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:30:2: note:   candidate expects 1 argument, 2 provided
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:26:7: note: ImageAlignment::ImageAlignment(const ImageAlignment&)
 class ImageAlignment {
       ^
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:26:7: note:   candidate expects 1 argument, 2 provided
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:26:7: note: ImageAlignment::ImageAlignment(ImageAlignment&&)
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:26:7: note:   candidate expects 1 argument, 2 provided
In file included from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:0:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:26:7: error: candidates are: ImageAlignment::ImageAlignment(ImageAlignment&&)
 class ImageAlignment {
       ^
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:26:7: error:                 ImageAlignment::ImageAlignment(const ImageAlignment&)
/home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:30:2: error:                 ImageAlignment::ImageAlignment(int)
  ImageAlignment(int num_levels);
  ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In member function ‘void ImageAlignment::setKeyframe(std::vector<cv::Mat>&, std::vector<cv::Mat>&)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:60:60: error: void value not ignored as it ought to be
       int num_points = cv::findNonZero(mask, depthLocations);
                                                            ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In member function ‘Eigen::Matrix<float, 8, 1> ImageAlignment::optimize(Eigen::Matrix<float, 8, 1>, cv::Mat&, cv::Mat&, cv::Mat&, cv::Mat&, cv::Mat&, Eigen::MatrixXf, Eigen::Matrix3f, cv::Mat&)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:177:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In member function ‘Eigen::Matrix<float, 8, 1> ImageAlignment::optimize2(Eigen::Matrix<float, 8, 1>, cv::Mat&, int)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:274:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
make[2]: *** [CMakeFiles/tracking.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/tracking.dir/src/SparseAlignment.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
